--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,15 +1,10 @@
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-.main{
+#signupBox{
   justify-content: center;
   display:flex;
   padding: 45px 45px 45px 45px ; 
   background-color: white;
 }
-.submain{
+#submain{
   height:500px;
   width:35%;
   border-radius: 10px;
@@ -18,13 +13,13 @@
   flex-direction: column;
   background-color: rgb(224,224,224);
 }
-.heading{
+#heading{
   display: inline-block;
   padding-left: 35%;
   font-weight: 400;
   font-size: 28px;
 }
-.inputs{
+#email{
   display: inline-block;
   margin-left: 8%;
   margin-right: 20%;
@@ -36,32 +31,81 @@
   color:black;
   background-color: rgb(160,160,160);
 }
-.selector{
+#password{
   display: inline-block;
   margin-left: 8%;
   margin-right: 20%;
-  width: 86%;
+  width: 80%;
   height: 8%;
   border-radius: 5px;
   border-style: none;
   padding-left: 20px;
+  color:black;
   background-color: rgb(160,160,160);
 }
-.submit{
+#mobilenumber{
   display: inline-block;
-  margin-left: 20%;
+  margin-left: 8%;
+  margin-right: 20%;
+  width: 80%;
   height: 8%;
-  width: 60%;
+  border-radius: 5px;
+  border-style: none;
+  padding-left: 20px;
+  color:black;
+  background-color: rgb(160,160,160);
+}
+#userrole{
+  display: inline-block;
+  margin-left: 8%;
+  margin-right: 20%;
+  width: 85%;
+  height: 8%;
+  border-radius: 5px;
+  border-style: none;
+  padding-left: 20px;
+  color:black;
+  background-color: rgb(160,160,160);
+}
+#username{
+  display: inline-block;
+  margin-left: 8%;
+  margin-right: 20%;
+  width: 80%;
+  height: 8%;
+  border-radius: 5px;
+  border-style: none;
+  padding-left: 20px;
+  color:black;
+  background-color: rgb(160,160,160);
+}
+#age{
+  display: inline-block;
+  margin-left: 8%;
+  margin-right: 20%;
+  width: 80%;
+  height: 8%;
+  border-radius: 5px;
+  border-style: none;
+  padding-left: 20px;
+  color:black;
+  background-color: rgb(160,160,160);
+}
+#submitButton{
+  display: inline-block;
+  margin-left: 16%;
+  height: 8%;
+  width: 70%;
   background-color: rgb(204,0,204);
   color: white;
   border-style: none;
   border-radius: 8px;
 }
-.link{
-  margin-left: 34%;
+#link{
+  margin-left: 32%;
 }
-.login{
-  margin-left:57.5%;
+#loginLink{
+  margin-left:2.5%;
   margin-top: -9.5%;
   color: blue;
 }
