--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,111 +1,38 @@
-#signupBox{
-  justify-content: center;
-  display:flex;
-  padding: 45px 45px 45px 45px ; 
-  background-color: white;
+.App {
+  text-align: center;
 }
-#submain{
-  height:500px;
-  width:35%;
-  border-radius: 10px;
-  border-style:none;
-  display:flex;
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
   flex-direction: column;
-  background-color: rgb(224,224,224);
-}
-#heading{
-  display: inline-block;
-  padding-left: 35%;
-  font-weight: 400;
-  font-size: 28px;
-}
-#email{
-  display: inline-block;
-  margin-left: 8%;
-  margin-right: 20%;
-  width: 80%;
-  height: 8%;
-  border-radius: 5px;
-  border-style: none;
-  padding-left: 20px;
-  color:black;
-  background-color: rgb(160,160,160);
-}
-#password{
-  display: inline-block;
-  margin-left: 8%;
-  margin-right: 20%;
-  width: 80%;
-  height: 8%;
-  border-radius: 5px;
-  border-style: none;
-  padding-left: 20px;
-  color:black;
-  background-color: rgb(160,160,160);
-}
-#mobilenumber{
-  display: inline-block;
-  margin-left: 8%;
-  margin-right: 20%;
-  width: 80%;
-  height: 8%;
-  border-radius: 5px;
-  border-style: none;
-  padding-left: 20px;
-  color:black;
-  background-color: rgb(160,160,160);
-}
-#userrole{
-  display: inline-block;
-  margin-left: 8%;
-  margin-right: 20%;
-  width: 85%;
-  height: 8%;
-  border-radius: 5px;
-  border-style: none;
-  padding-left: 20px;
-  color:black;
-  background-color: rgb(160,160,160);
-}
-#username{
-  display: inline-block;
-  margin-left: 8%;
-  margin-right: 20%;
-  width: 80%;
-  height: 8%;
-  border-radius: 5px;
-  border-style: none;
-  padding-left: 20px;
-  color:black;
-  background-color: rgb(160,160,160);
-}
-#age{
-  display: inline-block;
-  margin-left: 8%;
-  margin-right: 20%;
-  width: 80%;
-  height: 8%;
-  border-radius: 5px;
-  border-style: none;
-  padding-left: 20px;
-  color:black;
-  background-color: rgb(160,160,160);
-}
-#submitButton{
-  display: inline-block;
-  margin-left: 16%;
-  height: 8%;
-  width: 70%;
-  background-color: rgb(204,0,204);
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
   color: white;
-  border-style: none;
-  border-radius: 8px;
 }
-#link{
-  margin-left: 32%;
+
+.App-link {
+  color: #61dafb;
 }
-#loginLink{
-  margin-left:2.5%;
-  margin-top: -9.5%;
-  color: blue;
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
